fix: increase the width of the task name (item__label) to align the layout to the pattern

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
-  width: 226px;
+  width: 360px;
 }
 
 .block-list__item > .item__input.task {
